hello-go-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-go
  namespace: dev
spec:
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
  selector:
    app: hello-go
  type: ClusterIP
