hello-go.yaml
# Deployment of the Hello Go
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-go
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-go
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hello-go
    spec:
      containers:
        - name: hello-go
          image: 'canada/hello-app:v1.92'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          imagePullPolicy: Always
      restartPolicy: Always
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
---
apiVersion: v1
kind: Service
metadata:
  name: hello-go
  namespace: dev
spec:
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
  selector:
    app: hello-go
  type: ClusterIP
