react-cat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-cat
  namespace: dev
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: react-cat
  type: ClusterIP
