nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reallifeprojects
  namespace: dev
spec:
  ingressClassName: nginx
 #tls:
 #  - secretName: tls-secret
  rules:
    - host: www.reallifeprojects.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-cat
                port:
                  number: 80
    - host: subdomain.reallifeprojects.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-cat
                port:
                  number: 80
    - host: www.freemiumdb.com
      http:
        paths:
          - path: /hello-go
            pathType: Prefix
            backend:
              service:
                name: hello-go
                port:
                  number: 8081
